# optimal_tax

./: CMakeLists.txt  README  README.md  econ_mrsyx.cxx  elasticities.cxx  second_stage.cxx  second_stage_db.cxx  second_stageext.cxx
government_problem/: CMakeLists.txt  d2vdIdI.cpp  d2vdIdm.cpp  d2vdIdq.cpp  d2vdmdm.cpp  d2vdmdq.cpp  d2xdIdq.cpp  d2xdmdq.cpp  d2xdqdq.cpp  d2ydIdq.cpp  d2ydmdq.cpp  d2ydqdq.cpp  demandx.cpp  demandy.cpp  dvdI.cpp  dvdm.cpp  dxdI.cpp  dxdm.cpp  dxdq.cpp  dydI.cpp  dydm.cpp  dydq.cpp  formulas.h  indirectutility.cpp  stdafx.h  swf_fb.cpp  swf_fbext.cpp
multi_objective/: CMakeLists.txt  den.cpp  deninc.cpp  dldI.cpp  dldMnum.cpp  dldp.cpp  dldpnum.cpp  dldq.cpp  dldqnum.cpp  dldw.cpp  dldwnum.cpp  dxdI.cpp  dxdMnum.cpp  dxdp.cpp  dxdpnum.cpp  dxdq.cpp  dxdqnum.cpp  dxdw.cpp  dxdwnum.cpp  dydI.cpp  dydMnum.cpp  dydp.cpp  dydpnum.cpp  dydq.cpp  dydqnum.cpp  dydw.cpp  dydwnum.cpp  minor2.cpp  minor3.cpp  minor4.cpp  minors.cpp  mul.cpp  mux.cpp  muy.cpp  stdafx.h
